// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`[PAGE] 404 Page should render 1`] = `
<header class="sticky top-0 z-10 dark:bg-zinc-900/15 border-b shadow-xl backdrop-blur-md bg-white/10 border-t-0 dark:border-white/15 border-white/80 rounded-bl-xl rounded-br-xl">
  <div class="container py-4 px-6 mx-auto flex items-center justify-between">
    <div class="flex items-center">
      <a class="text-xl font-bold tracking-tight"
         href="/"
      >
        PAULO GONÇALVES
      </a>
    </div>
    <div class="flex justify-end">
      <label for="sd-tog"
             class="ic-link cursor-pointer"
             aria-label="Toggle side drawer"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
  </div>
</header>
<main class="container px-6 pt-14 pb-14 mx-auto sm:pb-14">
  <div class="flex flex-col items-center">
    <h1 class="text-3xl tracking-tight font-bold text-center opacity-1 sm:my-2 sm:text-5xl animate-fade-in-up-1">
      Oops!
    </h1>
    <h2 class="text-xl tracking-tight text-center lowercase opacity-1 sm:text-2xl animate-fade-in-up-2 pb-14">
      Page not found
    </h2>
    <div class="opacity-1 animate-fade-in-dw-3">
      <a class="btn"
         href="/undefined/"
      >
        <span>
          Go to homepage
        </span>
      </a>
    </div>
  </div>
</main>
<aside>
  <input class="sd-tog hidden"
         type="checkbox"
         id="sd-tog"
  >
  <div class="sd dark:bg-zinc-900/30 border-b rounded-tl-xl rounded-bl-xl shadow-xl backdrop-blur-md bg-white/30 border-l dark:border-white/10 border-white/50 top-0 right-0 w-[65vw] sm:w-[55vw] md:w-[45vw] lg:w-[35vw] fixed h-full z-40 ease-in-out duration-300 flex flex-col overflow-y-auto translate-x-full">
    <div class="flex pt-4 pb-5 mb-5 pl-8 pr-8 sm:pl-10 sm:pr-10 items-center">
      <div>
        <select class=" md:transform-gpu md:ease-out md:duration-500 md:transition-transform py-1 pr-7 text-sm rounded-sm text-zinc-900 dark:text-zinc-200 bg-zinc-100 dark:bg-zinc-800 border-zinc-800 dark:border-zinc-200 border-2 font-sans hover:border-slate-500  focus:border-slate-500 ml-2 mr-6"
                aria-label="Language selection"
        >
          <option value="en">
            EN
          </option>
          <option value="pt">
            PT
          </option>
        </select>
      </div>
      <button class="ic-link -sup-novar p-2"
              aria-label="Toggle to dark mode"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </button>
      <label for="sd-tog"
             class="ic-link cursor-pointer ml-auto"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
    <div class="flex flex-col pl-10 pr-10">
      <a class="btn"
         href="/undefined/"
      >
        <span>
          Homepage
        </span>
      </a>
      <a class="btn mt-4"
         href="/undefined/contact/"
      >
        <span>
          Contact
        </span>
      </a>
    </div>
    <div class="flex pt-10 pb-4 pl-8 pr-8 sm:pl-10 sm:pr-10 mx-auto mt-auto">
      <a href="https://www.twitter.com/paulogoncalvs"
         aria-label="Twitter (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="ic-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://www.github.com/paulogoncalvs"
         aria-label="GitHub (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="ic-link ml-4 mr-4"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://pt.linkedin.com/in/paulogoncalvs"
         aria-label="LinkedIn (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="ic-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
    </div>
  </div>
</aside>
<footer>
  <div class="text-center bg-white/20 dark:bg-zinc-900/15 shadow-xs shadow-black/5 border dark:border-white/15 border-white/80 border-l-0 border-r-0 p-6">
    <div class="container flex flex-col items-center px-6 pt-10 mx-auto pb-8">
      <p class="text-sm font-bold pb-4">
        Website Technology Stack:
      </p>
      <div class="flex flex-wrap justify-center align-middle">
        <a href="https://www.typescriptlang.org/"
           aria-label="TypeScript (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://preactjs.com/"
           aria-label="Preact (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://webpack.js.org/"
           aria-label="Webpack (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://yarnpkg.com/"
           aria-label="Yarn (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://eslint.org/"
           aria-label="ESLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://stylelint.io/"
           aria-label="StyleLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://developers.google.com/web/tools/workbox"
           aria-label="Workbox (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://analytics.google.com/"
           aria-label="Google Analytics (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="28"
               height="28"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://tailwindcss.com/"
           aria-label="Tailwind CSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://playwright.dev/"
           aria-label="Playwright (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://jestjs.io/"
           aria-label="Jest (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://prettier.io/"
           aria-label="Prettier (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://postcss.org/"
           aria-label="PostCSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://www.deque.com/axe/"
           aria-label="Axe (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://babeljs.io/"
           aria-label="Babel (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="60"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
      </div>
      <p class="text-xs pt-4">
        The full source code is available on
        <a href="https://github.com/paulogoncalvs/pg-web"
           target="_blank"
           rel="noopener noreferrer"
           class="underline"
        >
          GitHub
        </a>
        .
      </p>
    </div>
  </div>
  <div class="container flex flex-col items-center py-8 mx-auto text-xs text-center sm:py-16">
    <p>
      optimized for modern browsers 🙂
    </p>
    <p class="pt-2 font-bold">
      paulogoncalves.dev © 2021 - 2022
    </p>
  </div>
</footer>
<div class="fixed overflow-hidden z-10 dark:bg-zinc-900/60 bg-white/40 inset-0 transform ease-in-out duration-700 opacity-0 hidden transition-transform"
     aria-hidden="false"
>
</div>
`;

exports[`[PAGE] Contact Page should render 1`] = `
<header class="sticky top-0 z-10 dark:bg-zinc-900/15 border-b shadow-xl backdrop-blur-md bg-white/10 border-t-0 dark:border-white/15 border-white/80 rounded-bl-xl rounded-br-xl">
  <div class="container py-4 px-6 mx-auto flex items-center justify-between">
    <div class="flex items-center">
      <a class="text-xl font-bold tracking-tight"
         href="/"
      >
        PAULO GONÇALVES
      </a>
    </div>
    <div class="flex justify-end">
      <label for="sd-tog"
             class="ic-link cursor-pointer"
             aria-label="Toggle side drawer"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
  </div>
</header>
<main class="container px-6 pt-14 pb-14 mx-auto sm:pb-14">
  <div class="flex flex-col items-center">
    <h1 class="text-3xl tracking-tight font-bold text-center opacity-1 sm:my-2 sm:text-5xl animate-fade-in-up-1">
      Contact me
    </h1>
    <h2 class="text-xl text-center lowercase opacity-1 sm:text-2xl animate-fade-in-up-2 pb-14">
      by e-mail
    </h2>
  </div>
  <div class="flex flex-col items-center pb-14 opacity-1 animate-fade-in-dw-3">
    <a href="mailto:contact@paulogoncalves.dev"
       class="btn _i"
    >
      <svg aria-hidden="true"
           class="fill-current"
           width="24"
           height="24"
      >
        <use href="#">
        </use>
      </svg>
      <span>
        Send
      </span>
    </a>
  </div>
  <div class="flex flex-col items-center pb-12 opacity-1 animate-fade-in-dw-4 relative select-none pointer-events-none">
    <form action="undefinedcontact/"
          class="mt-16 opacity-20"
    >
      <h2 class="text-xl sm:text-3xl mb-4">
        Contact form
      </h2>
      <div class="mt-2">
        <label for="firstName">
          First name
        </label>
        <input class="dark:bg-zinc-800 dark:border-zinc-600 w-full rounded-md"
               id="firstName"
               type="text"
               name="firstName"
               value
               disabled
        >
      </div>
      <div class="mt-2">
        <label for="lastName">
          Last name
        </label>
        <input class="dark:bg-zinc-800 dark:border-zinc-600 w-full rounded-md"
               id="lastName"
               type="text"
               name="lastName"
               value
               disabled
        >
      </div>
      <div class="mt-2">
        <label for="email">
          E-mail
        </label>
        <input class="dark:bg-zinc-800 dark:border-zinc-600 w-full rounded-md"
               id="email"
               type="email"
               name="email"
               value
               disabled
        >
      </div>
      <button disabled
              class="btn mt-4"
      >
        Send message
      </button>
    </form>
    <p class="text-xl tracking-tight font-bold absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
      Disabled
    </p>
  </div>
</main>
<aside>
  <input class="sd-tog hidden"
         type="checkbox"
         id="sd-tog"
  >
  <div class="sd dark:bg-zinc-900/30 border-b rounded-tl-xl rounded-bl-xl shadow-xl backdrop-blur-md bg-white/30 border-l dark:border-white/10 border-white/50 top-0 right-0 w-[65vw] sm:w-[55vw] md:w-[45vw] lg:w-[35vw] fixed h-full z-40 ease-in-out duration-300 flex flex-col overflow-y-auto translate-x-full">
    <div class="flex pt-4 pb-5 mb-5 pl-8 pr-8 sm:pl-10 sm:pr-10 items-center">
      <div>
        <select class=" md:transform-gpu md:ease-out md:duration-500 md:transition-transform py-1 pr-7 text-sm rounded-sm text-zinc-900 dark:text-zinc-200 bg-zinc-100 dark:bg-zinc-800 border-zinc-800 dark:border-zinc-200 border-2 font-sans hover:border-slate-500  focus:border-slate-500 ml-2 mr-6"
                aria-label="Language selection"
        >
          <option value="en">
            EN
          </option>
          <option value="pt">
            PT
          </option>
        </select>
      </div>
      <button class="ic-link -sup-novar p-2"
              aria-label="Toggle to dark mode"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </button>
      <label for="sd-tog"
             class="ic-link cursor-pointer ml-auto"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
    <div class="flex flex-col pl-10 pr-10">
      <a class="btn"
         href="/undefined/"
      >
        <span>
          Homepage
        </span>
      </a>
      <a class="btn mt-4"
         href="/undefined/contact/"
      >
        <span>
          Contact
        </span>
      </a>
    </div>
    <div class="flex pt-10 pb-4 pl-8 pr-8 sm:pl-10 sm:pr-10 mx-auto mt-auto">
      <a href="https://www.twitter.com/paulogoncalvs"
         aria-label="Twitter (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="ic-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://www.github.com/paulogoncalvs"
         aria-label="GitHub (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="ic-link ml-4 mr-4"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://pt.linkedin.com/in/paulogoncalvs"
         aria-label="LinkedIn (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="ic-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
    </div>
  </div>
</aside>
<footer>
  <div class="text-center bg-white/20 dark:bg-zinc-900/15 shadow-xs shadow-black/5 border dark:border-white/15 border-white/80 border-l-0 border-r-0 p-6">
    <div class="container flex flex-col items-center px-6 pt-10 mx-auto pb-8">
      <p class="text-sm font-bold pb-4">
        Website Technology Stack:
      </p>
      <div class="flex flex-wrap justify-center align-middle">
        <a href="https://www.typescriptlang.org/"
           aria-label="TypeScript (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://preactjs.com/"
           aria-label="Preact (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://webpack.js.org/"
           aria-label="Webpack (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://yarnpkg.com/"
           aria-label="Yarn (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://eslint.org/"
           aria-label="ESLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://stylelint.io/"
           aria-label="StyleLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://developers.google.com/web/tools/workbox"
           aria-label="Workbox (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://analytics.google.com/"
           aria-label="Google Analytics (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="28"
               height="28"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://tailwindcss.com/"
           aria-label="Tailwind CSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://playwright.dev/"
           aria-label="Playwright (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://jestjs.io/"
           aria-label="Jest (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://prettier.io/"
           aria-label="Prettier (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://postcss.org/"
           aria-label="PostCSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://www.deque.com/axe/"
           aria-label="Axe (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://babeljs.io/"
           aria-label="Babel (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="60"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
      </div>
      <p class="text-xs pt-4">
        The full source code is available on
        <a href="https://github.com/paulogoncalvs/pg-web"
           target="_blank"
           rel="noopener noreferrer"
           class="underline"
        >
          GitHub
        </a>
        .
      </p>
    </div>
  </div>
  <div class="container flex flex-col items-center py-8 mx-auto text-xs text-center sm:py-16">
    <p>
      optimized for modern browsers 🙂
    </p>
    <p class="pt-2 font-bold">
      paulogoncalves.dev © 2021 - 2022
    </p>
  </div>
</footer>
<div class="fixed overflow-hidden z-10 dark:bg-zinc-900/60 bg-white/40 inset-0 transform ease-in-out duration-700 opacity-0 hidden transition-transform"
     aria-hidden="false"
>
</div>
`;

exports[`[PAGE] Home Page should render 1`] = `
<header class="sticky top-0 z-10 dark:bg-zinc-900/15 border-b shadow-xl backdrop-blur-md bg-white/10 border-t-0 dark:border-white/15 border-white/80 rounded-bl-xl rounded-br-xl">
  <div class="container py-4 px-6 mx-auto flex items-center justify-between">
    <div class="flex items-center">
      <a class="text-xl font-bold tracking-tight"
         href="/"
      >
        PAULO GONÇALVES
      </a>
    </div>
    <div class="flex justify-end">
      <label for="sd-tog"
             class="ic-link cursor-pointer"
             aria-label="Toggle side drawer"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
  </div>
</header>
<main class="container px-6 pt-14 pb-14 mx-auto sm:pb-14">
  <div class="flex flex-col items-center">
    <h1 class="text-3xl tracking-tight font-bold text-center opacity-1 sm:my-2 sm:text-5xl animate-fade-in-up-1">
      PAULO GONÇALVES
    </h1>
    <h2 class="text-xl text-center lowercase opacity-1 sm:text-2xl animate-fade-in-up-2">
      Front-End Engineer
    </h2>
    <div class="flex flex-col items-center pt-14 pb-14 sm:flex-row">
      <div class="shrink-0 opacity-1 animate-fade-in-dw-3">
        <img width="200"
             height="200"
             fetchpriority="high"
             class="animate-pulse rounded-full shadow-[inset_0_1px_0px_rgba(255,255,255,0.75),0_0_9px_rgba(0,0,0,0.2),0_3px_8px_rgba(0,0,0,0.15)] bg-white/30 border border-white/20"
             alt
             src="test-file-stub"
             srcset="test-file-stub, test-file-stub 2x"
        >
      </div>
      <div class="max-w-xs text-sm opacity-1 sm:pl-14 space-y-4 sm:max-w-md pt-14 sm:pt-0 animate-fade-in-dw-4 sm:text-base">
        <p>
          Native of Vila Nova de Gaia, Porto district, Portugal.
        </p>
        <p class>
          Currently working as a
          <strong>
            Principal Front-End Engineer
          </strong>
          at
          <strong>
            Porto Tech Center - Jumia
          </strong>
          , where I architect and develop large-scale, high-performance web applications using modern front-end frameworks and tooling.
        </p>
        <p>
          For more technical details and experience, please visit my
          <a href="https://pt.linkedin.com/in/paulogoncalvs"
             target="_blank"
             rel="noopener noreferrer"
             class="underline"
          >
            LinkedIn profile
          </a>
          .
        </p>
      </div>
    </div>
    <div class="opacity-1 animate-fade-in-dw-5 text-center">
      <a class="btn _i"
         href="/undefined/contact/"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
        <span>
          Contact me
        </span>
      </a>
    </div>
  </div>
</main>
<aside>
  <input class="sd-tog hidden"
         type="checkbox"
         id="sd-tog"
  >
  <div class="sd dark:bg-zinc-900/30 border-b rounded-tl-xl rounded-bl-xl shadow-xl backdrop-blur-md bg-white/30 border-l dark:border-white/10 border-white/50 top-0 right-0 w-[65vw] sm:w-[55vw] md:w-[45vw] lg:w-[35vw] fixed h-full z-40 ease-in-out duration-300 flex flex-col overflow-y-auto translate-x-full">
    <div class="flex pt-4 pb-5 mb-5 pl-8 pr-8 sm:pl-10 sm:pr-10 items-center">
      <div>
        <select class=" md:transform-gpu md:ease-out md:duration-500 md:transition-transform py-1 pr-7 text-sm rounded-sm text-zinc-900 dark:text-zinc-200 bg-zinc-100 dark:bg-zinc-800 border-zinc-800 dark:border-zinc-200 border-2 font-sans hover:border-slate-500  focus:border-slate-500 ml-2 mr-6"
                aria-label="Language selection"
        >
          <option value="en">
            EN
          </option>
          <option value="pt">
            PT
          </option>
        </select>
      </div>
      <button class="ic-link -sup-novar p-2"
              aria-label="Toggle to dark mode"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </button>
      <label for="sd-tog"
             class="ic-link cursor-pointer ml-auto"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
    <div class="flex flex-col pl-10 pr-10">
      <a class="btn _act"
         href="/undefined/"
      >
        <span>
          Homepage
        </span>
      </a>
      <a class="btn mt-4"
         href="/undefined/contact/"
      >
        <span>
          Contact
        </span>
      </a>
    </div>
    <div class="flex pt-10 pb-4 pl-8 pr-8 sm:pl-10 sm:pr-10 mx-auto mt-auto">
      <a href="https://www.twitter.com/paulogoncalvs"
         aria-label="Twitter (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="ic-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://www.github.com/paulogoncalvs"
         aria-label="GitHub (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="ic-link ml-4 mr-4"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://pt.linkedin.com/in/paulogoncalvs"
         aria-label="LinkedIn (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="ic-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
    </div>
  </div>
</aside>
<footer>
  <div class="text-center bg-white/20 dark:bg-zinc-900/15 shadow-xs shadow-black/5 border dark:border-white/15 border-white/80 border-l-0 border-r-0 p-6">
    <div class="container flex flex-col items-center px-6 pt-10 mx-auto pb-8">
      <p class="text-sm font-bold pb-4">
        Website Technology Stack:
      </p>
      <div class="flex flex-wrap justify-center align-middle">
        <a href="https://www.typescriptlang.org/"
           aria-label="TypeScript (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://preactjs.com/"
           aria-label="Preact (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://webpack.js.org/"
           aria-label="Webpack (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://yarnpkg.com/"
           aria-label="Yarn (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://eslint.org/"
           aria-label="ESLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://stylelint.io/"
           aria-label="StyleLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://developers.google.com/web/tools/workbox"
           aria-label="Workbox (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://analytics.google.com/"
           aria-label="Google Analytics (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="28"
               height="28"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://tailwindcss.com/"
           aria-label="Tailwind CSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://playwright.dev/"
           aria-label="Playwright (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://jestjs.io/"
           aria-label="Jest (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://prettier.io/"
           aria-label="Prettier (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://postcss.org/"
           aria-label="PostCSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://www.deque.com/axe/"
           aria-label="Axe (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://babeljs.io/"
           aria-label="Babel (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="60"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
      </div>
      <p class="text-xs pt-4">
        The full source code is available on
        <a href="https://github.com/paulogoncalvs/pg-web"
           target="_blank"
           rel="noopener noreferrer"
           class="underline"
        >
          GitHub
        </a>
        .
      </p>
    </div>
  </div>
  <div class="container flex flex-col items-center py-8 mx-auto text-xs text-center sm:py-16">
    <p>
      optimized for modern browsers 🙂
    </p>
    <p class="pt-2 font-bold">
      paulogoncalves.dev © 2021 - 2022
    </p>
  </div>
</footer>
<div class="fixed overflow-hidden z-10 dark:bg-zinc-900/60 bg-white/40 inset-0 transform ease-in-out duration-700 opacity-0 hidden transition-transform"
     aria-hidden="false"
>
</div>
`;

exports[`[PAGE] Offline Page should render 1`] = `
<header class="sticky top-0 z-10 dark:bg-zinc-900/15 border-b shadow-xl backdrop-blur-md bg-white/10 border-t-0 dark:border-white/15 border-white/80 rounded-bl-xl rounded-br-xl">
  <div class="container py-4 px-6 mx-auto flex items-center justify-between">
    <div class="flex items-center">
      <a class="text-xl font-bold tracking-tight"
         href="/"
      >
        PAULO GONÇALVES
      </a>
    </div>
    <div class="flex justify-end">
      <label for="sd-tog"
             class="ic-link cursor-pointer"
             aria-label="Toggle side drawer"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
  </div>
</header>
<main class="container px-6 pt-14 pb-14 mx-auto sm:pb-14">
  <div class="flex flex-col items-center">
    <h1 class="text-3xl tracking-tight font-bold text-center opacity-1 sm:my-2 sm:text-5xl animate-fade-in-up-1">
      Oops!
    </h1>
    <h2 class="text-2xl tracking-tight text-center lowercase opacity-1 sm:text-3xl animate-fade-in-up-2 pb-8">
      You are currently offline
    </h2>
    <p class="text-l opacity-1 animate-fade-in-dw-4 pb-14 text-center">
      You need an Internet connection.
    </p>
    <div class="opacity-1 animate-fade-in-dw-3">
      <a class="btn"
         href="/undefined/"
      >
        <span>
          Go back to homepage
        </span>
      </a>
    </div>
  </div>
</main>
<aside>
  <input class="sd-tog hidden"
         type="checkbox"
         id="sd-tog"
  >
  <div class="sd dark:bg-zinc-900/30 border-b rounded-tl-xl rounded-bl-xl shadow-xl backdrop-blur-md bg-white/30 border-l dark:border-white/10 border-white/50 top-0 right-0 w-[65vw] sm:w-[55vw] md:w-[45vw] lg:w-[35vw] fixed h-full z-40 ease-in-out duration-300 flex flex-col overflow-y-auto translate-x-full">
    <div class="flex pt-4 pb-5 mb-5 pl-8 pr-8 sm:pl-10 sm:pr-10 items-center">
      <div>
        <select class=" md:transform-gpu md:ease-out md:duration-500 md:transition-transform py-1 pr-7 text-sm rounded-sm text-zinc-900 dark:text-zinc-200 bg-zinc-100 dark:bg-zinc-800 border-zinc-800 dark:border-zinc-200 border-2 font-sans hover:border-slate-500  focus:border-slate-500 ml-2 mr-6"
                aria-label="Language selection"
        >
          <option value="en">
            EN
          </option>
          <option value="pt">
            PT
          </option>
        </select>
      </div>
      <button class="ic-link -sup-novar p-2"
              aria-label="Toggle to dark mode"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </button>
      <label for="sd-tog"
             class="ic-link cursor-pointer ml-auto"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
    <div class="flex flex-col pl-10 pr-10">
      <a class="btn"
         href="/undefined/"
      >
        <span>
          Homepage
        </span>
      </a>
      <a class="btn mt-4"
         href="/undefined/contact/"
      >
        <span>
          Contact
        </span>
      </a>
    </div>
    <div class="flex pt-10 pb-4 pl-8 pr-8 sm:pl-10 sm:pr-10 mx-auto mt-auto">
      <a href="https://www.twitter.com/paulogoncalvs"
         aria-label="Twitter (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="ic-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://www.github.com/paulogoncalvs"
         aria-label="GitHub (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="ic-link ml-4 mr-4"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://pt.linkedin.com/in/paulogoncalvs"
         aria-label="LinkedIn (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="ic-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
    </div>
  </div>
</aside>
<footer>
  <div class="text-center bg-white/20 dark:bg-zinc-900/15 shadow-xs shadow-black/5 border dark:border-white/15 border-white/80 border-l-0 border-r-0 p-6">
    <div class="container flex flex-col items-center px-6 pt-10 mx-auto pb-8">
      <p class="text-sm font-bold pb-4">
        Website Technology Stack:
      </p>
      <div class="flex flex-wrap justify-center align-middle">
        <a href="https://www.typescriptlang.org/"
           aria-label="TypeScript (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://preactjs.com/"
           aria-label="Preact (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://webpack.js.org/"
           aria-label="Webpack (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://yarnpkg.com/"
           aria-label="Yarn (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://eslint.org/"
           aria-label="ESLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://stylelint.io/"
           aria-label="StyleLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://developers.google.com/web/tools/workbox"
           aria-label="Workbox (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://analytics.google.com/"
           aria-label="Google Analytics (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="28"
               height="28"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://tailwindcss.com/"
           aria-label="Tailwind CSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://playwright.dev/"
           aria-label="Playwright (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://jestjs.io/"
           aria-label="Jest (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://prettier.io/"
           aria-label="Prettier (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://postcss.org/"
           aria-label="PostCSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://www.deque.com/axe/"
           aria-label="Axe (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://babeljs.io/"
           aria-label="Babel (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="ic-link _up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="60"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
      </div>
      <p class="text-xs pt-4">
        The full source code is available on
        <a href="https://github.com/paulogoncalvs/pg-web"
           target="_blank"
           rel="noopener noreferrer"
           class="underline"
        >
          GitHub
        </a>
        .
      </p>
    </div>
  </div>
  <div class="container flex flex-col items-center py-8 mx-auto text-xs text-center sm:py-16">
    <p>
      optimized for modern browsers 🙂
    </p>
    <p class="pt-2 font-bold">
      paulogoncalves.dev © 2021 - 2022
    </p>
  </div>
</footer>
<div class="fixed overflow-hidden z-10 dark:bg-zinc-900/60 bg-white/40 inset-0 transform ease-in-out duration-700 opacity-0 hidden transition-transform"
     aria-hidden="false"
>
</div>
`;
